--- a/index.html
+++ b/index.html
@@ -87,11 +87,32 @@
                                         placeholder="Ваша електронна пошта"
                                     />
                                 </div>
-                                <button class="find__form-btn btn" type="submit">Записатись безкоштовно</button>
+                                <button
+                                    class="find__form-btn btn"
+                                    type="submit"
+                                >
+                                    Записатись безкоштовно
+                                </button>
                             </form>
+                            <p class="find__form-confidantials">
+                                Натискаючи на кнопку я погоджуюсь
+                                <a class="confidantials__link" href="http://"
+                                    >з політикою конфіденційності</a
+                                >
+                            </p>
                         </div>
                     </div>
                 </div>
+                <iframe
+                    class="find__map-mobile"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.936792054004!2d30.511426859733177!3d50.44227799542862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef9a90945a1%3A0x10dd6115b6be3f7c!2sTaras%20Shevchenko%20Park!5e0!3m2!1sen!2sua!4v1699691995089!5m2!1sen!2sua"
+                    width="600"
+                    height="480"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
             </section>
         </main>
         <footer></footer>
