--- a/index.html
+++ b/index.html
@@ -22,6 +22,42 @@
                     </svg>
                 </button>
             </div>
+            <section class="choose">
+                <div class="choose__container">
+                    <h2 class="choose__title">
+                        Чому люди <span class="colored">обирають нас</span>
+                    </h2>
+                    <div class="choose__cards">
+                        <div class="choose__card">
+                            <svg class="icon" width="48" height="48">
+                                <use href="./images/icons.svg#icon-rounds"></use>
+                            </svg>
+                            <p class="choose__card-text">
+                                Всі наші косметологи мають вищу медичну освіту
+                                та стаж роботи від 5 років
+                            </p>
+                        </div>
+                        <div class="choose__card">
+                            <svg class="icon" width="48" height="48">
+                                <use href="./images/icons.svg#icon-stuff"></use>
+                            </svg>
+                            <p class="choose__card-text">
+                                Використовуємо тільки професійне обладнання та
+                                косметику, перевірену часом
+                            </p>
+                        </div>
+                        <div class="choose__card">
+                            <svg class="icon" width="48" height="48">
+                                <use href="./images/icons.svg#icon-crown"></use>
+                            </svg>
+                            <p class="choose__card-text">
+                                Наша мета - підкреслити переваги та приховати
+                                недоліки, а не переробити
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="find">
                 <div class="find__container">
                     <h2 class="find__title">
