--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                     <span class="hero__subtitle">Косметологічна клініка</span>
                     <h1 class="hero__title colored">beauty zone</h1>
                     <button class="hero__btn btn">Замовити дзвінок</button>
-                    <p class="hero__text">Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+                    <p class="hero__text">
+                        Запишись та отримай безкоштовну консультацію нашого
+                        косметолога
+                    </p>
                 </div>
             </section>
             <section class="choose">
@@ -28,7 +31,9 @@
                     <div class="choose__cards">
                         <div class="choose__card">
                             <svg class="icon" width="48" height="48">
-                                <use href="./images/icons.svg#icon-rounds"></use>
+                                <use
+                                    href="./images/icons.svg#icon-rounds"
+                                ></use>
                             </svg>
                             <p class="choose__card-text">
                                 Всі наші косметологи мають вищу медичну освіту
@@ -58,7 +63,9 @@
             </section>
             <section class="procedures visually-hidden">
                 <div class="procedures__container">
-                    <h2 class="procedures__title">Наші <span class="colored">процедури</span></h2>
+                    <h2 class="procedures__title">
+                        Наші <span class="colored">процедури</span>
+                    </h2>
                     <div class="procedures__content">
                         <button class="carusel">
                             <svg class="carusel-arrow" width="17" height="'17">
@@ -67,15 +74,19 @@
                         </button>
                         <div class="procedures__cards">
                             <div class="procedures__card">
-                                <span class="procedures__card-text">Маски для обличчя</span>
+                                <span class="procedures__card-text"
+                                    >Маски для обличчя</span
+                                >
                             </div>
                             <div class="procedures__card">
-                                <span class="procedures__card-text">Ін'єкції 
-                                    для обличчя</span>
+                                <span class="procedures__card-text"
+                                    >Ін'єкції для обличчя</span
+                                >
                             </div>
                             <div class="procedures__card">
-                                <span class="procedures__card-text">Очищення 
-                                    обличчя</span>
+                                <span class="procedures__card-text"
+                                    >Очищення обличчя</span
+                                >
                             </div>
                         </div>
                         <button class="carusel carusel-right">
@@ -85,13 +96,34 @@
                         </button>
                     </div>
                     <div class="carusel-nav">
-                        <svg class="carusel-dot dot-active" xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11" fill="none">
+                        <svg
+                            class="carusel-dot dot-active"
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="12"
+                            height="11"
+                            viewBox="0 0 12 11"
+                            fill="none"
+                        >
                             <circle cx="6" cy="5.5" r="5.5" />
                         </svg>
-                        <svg class="carusel-dot" xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11" fill="none">
-                            <circle cx="6" cy="5.5" r="5.5"/>
+                        <svg
+                            class="carusel-dot"
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="12"
+                            height="11"
+                            viewBox="0 0 12 11"
+                            fill="none"
+                        >
+                            <circle cx="6" cy="5.5" r="5.5" />
                         </svg>
-                        <svg class="carusel-dot" xmlns="http://www.w3.org/2000/svg" width="12" height="11" viewBox="0 0 12 11" fill="none">
+                        <svg
+                            class="carusel-dot"
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="12"
+                            height="11"
+                            viewBox="0 0 12 11"
+                            fill="none"
+                        >
                             <circle cx="6" cy="5.5" r="5.5" />
                         </svg>
                     </div>
@@ -114,50 +146,50 @@
                             referrerpolicy="no-referrer-when-downgrade"
                         ></iframe>
                         <div class="find__backdrop">
-                            <h3 class="find__form-title">
+                            <h3 class="find__form-title form-title">
                                 Запишіться
                                 <span class="colored">безкоштовно</span> та
                                 отримайте подарунок
                             </h3>
-                            <form class="find__form" autocomplete="off">
-                                <div class="find__form-field">
+                            <form class="find__form form" autocomplete="off">
+                                <div class="find__form-field form-field">
                                     <label
                                         class="find__form-label visually-hidden"
                                         for="user-name"
                                         >Ваше ім'я та прізвище</label
                                     >
                                     <input
-                                        class="find__form-input"
+                                        class="form-input"
                                         type="text"
                                         name="user-name"
                                         id="user-name"
                                         placeholder="Ваше ім'я та прізвище"
                                     />
                                 </div>
-                                <div class="find__form-field">
+                                <div class="find__form-field form-field">
                                     <label
                                         for="user-phone"
                                         class="find__form-label visually-hidden"
                                         >Ваш номер телефону</label
                                     >
                                     <input
-                                        class="find__form-input"
+                                        class="form-input"
                                         type="tel"
                                         name="user-phone"
                                         id="user-phone"
                                         placeholder="Ваш номер телефону"
-                                        pattern= "^\+[0-9]{12}"
+                                        pattern="^\+[0-9]{12}"
                                         title="+380xxxxxxxxx"
                                     />
                                 </div>
-                                <div class="find__form-field">
+                                <div class="find__form-field form-field">
                                     <label
                                         for="user-email"
                                         class="find__form-label visually-hidden"
                                         >Ваша електронна пошта</label
                                     >
                                     <input
-                                        class="find__form-input"
+                                        class="form-input"
                                         type="email"
                                         name="user-email"
                                         id="user-email"
@@ -171,7 +203,7 @@
                                     Записатись безкоштовно
                                 </button>
                             </form>
-                            <p class="find__form-confidantials">
+                            <p class="form-confidantials">
                                 Натискаючи на кнопку я погоджуюсь
                                 <a class="confidantials__link" href="http://"
                                     >з політикою конфіденційності</a
@@ -196,71 +228,90 @@
 
         <div class="backdrop visually-hidden">
             <div class="modal">
-                <h3 class="find__form-title">
+                <svg
+                    class="close"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="32"
+                    height="32"
+                    viewBox="0 0 32 32"
+                    fill="none"
+                >
+                    <path
+                        d="M8 8L16 16L24 8"
+                        stroke="white"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                    />
+                    <path
+                        d="M8 24L16 16L24 24"
+                        stroke="white"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                    />
+                </svg>
+                <h2 class="modal__header">Замовити дзвінок</h2>
+                <h3 class="form-title">
                     Запишіться
-                    <span class="colored">безкоштовно</span> та
-                    отримайте подарунок
+                    <span class="colored">безкоштовно</span> та отримайте
+                    подарунок
                 </h3>
                 <form class="find__form" autocomplete="off">
-                    <div class="find__form-field">
+                    <div class="form-field">
                         <label
                             class="find__form-label visually-hidden"
                             for="user-name"
                             >Ваше ім'я та прізвище</label
                         >
                         <input
-                            class="find__form-input"
+                            class="form-input"
                             type="text"
                             name="user-name"
                             id="user-name"
                             placeholder="Ваше ім'я та прізвище"
                         />
                     </div>
-                    <div class="find__form-field">
+                    <div class="form-field">
                         <label
                             for="user-phone"
                             class="find__form-label visually-hidden"
                             >Ваш номер телефону</label
                         >
                         <input
-                            class="find__form-input"
+                            class="form-input"
                             type="tel"
                             name="user-phone"
                             id="user-phone"
                             placeholder="Ваш номер телефону"
-                            pattern= "^\+[0-9]{12}"
+                            pattern="^\+[0-9]{12}"
                             title="+380xxxxxxxxx"
                         />
                     </div>
-                    <div class="find__form-field">
+                    <div class="form-field">
                         <label
                             for="user-email"
                             class="find__form-label visually-hidden"
                             >Ваша електронна пошта</label
                         >
                         <input
-                            class="find__form-input"
+                            class="form-input"
                             type="email"
                             name="user-email"
                             id="user-email"
                             placeholder="Ваша електронна пошта"
                         />
                     </div>
-                    <button
-                        class="find__form-btn btn"
-                        type="submit"
-                    >
+                    <button class="find__form-btn btn" type="submit">
                         Записатись безкоштовно
                     </button>
                 </form>
-                <p class="find__form-confidantials">
+                <p class="form-confidantials">
                     Натискаючи на кнопку я погоджуюсь
                     <a class="confidantials__link" href="http://"
                         >з політикою конфіденційності</a
                     >
                 </p>
             </div>
-            
         </div>
+        <script src="./js/modal.js"></script>
     </body>
 </html>
