--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__container"></div>
+            <div class="header__container">
+                <button class="burger" type="button">
+                    <svg class="burger__menu" width="24" height="24">
+                        <use href="./images/icons.svg#icon-menu"></use>
+                    </svg>
+                </button>
+            </div>
         </header>
         <main>
             <section class="hero">
@@ -61,7 +67,7 @@
                     </div>
                 </div>
             </section>
-            <section class="procedures visually-hidden">
+            <section class="procedures ">
                 <div class="procedures__container">
                     <h2 class="procedures__title">
                         Наші <span class="colored">процедури</span>
@@ -74,16 +80,19 @@
                         </button>
                         <div class="procedures__cards">
                             <div class="procedures__card">
+                                <img src="./images/maskFace.jpg" alt="Mask" class="procedures__card-image">
                                 <span class="procedures__card-text"
                                     >Маски для обличчя</span
                                 >
                             </div>
                             <div class="procedures__card">
+                                <img src="./images/needleFace.jpg" alt="Mask" class="procedures__card-image">
                                 <span class="procedures__card-text"
                                     >Ін'єкції для обличчя</span
                                 >
                             </div>
                             <div class="procedures__card">
+                                <img src="./images/spatulaFace.jpg" alt="Mask" class="procedures__card-image">
                                 <span class="procedures__card-text"
                                     >Очищення обличчя</span
                                 >
