--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <body>
         <header class="header">
             <div class="header__container">
-                <button class="burger" type="button">
+                <button class="burger menu-btn-open" type="button">
                     <svg class="burger__menu" width="24" height="24">
                         <use href="./images/icons.svg#icon-menu"></use>
+                    </svg>
+                </button>
+            </div>
+            <div class="mobile-menu">
+                <button class="mobile-menu__btn-close menu-btn-close" type="button">
+                    <svg class="mobile-menu__icon-close" width="24" height="24">
+                        <use href="./images/icons.svg#icon-iconClose"></use>
                     </svg>
                 </button>
             </div>
@@ -322,5 +329,6 @@
             </div>
         </div>
         <script src="./js/modal.js"></script>
+        <script src="./js/mobile-menu.js"></script>
     </body>
 </html>
