--- a/index.html
+++ b/index.html
@@ -11,25 +11,53 @@
         <header class="header">
             <div class="header__container">
                 <nav class="header__nav">
-                    <a href="#" class="logo"></a>
+                    <a href="#" class="logo">
+                        <img
+                            src="./images/logo.svg"
+                            alt="Logo"
+                            class="logo__img"
+                        />
+                    </a>
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a href="#about" class="menu__link colored">Про нас</a>
+                            <a href="#about" class="menu__link colored"
+                                >Про нас</a
+                            >
                         </li>
                         <li class="menu__item">
                             <a href="#why" class="menu__link">Чому ми</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#procedures" class="menu__link"> Наші процедури </a>
+                            <a href="#procedures" class="menu__link">
+                                Наші процедури
+                            </a>
                         </li>
                         <li class="menu__item">
                             <a href="#find" class="menu__link"> Контакти </a>
-                        </li>                          
+                        </li>
                     </ul>
                     <ul class="socials__list">
-                        <li class="socials__item"></li>
-                        <li class="socials__item"></li>
-                        <li class="socials__item"></li>
+                        <li class="socials__item">
+                            <a href="tel:+380995327811" class="socials__link" target="_blank">
+                                <svg class="socials__icon">
+                                    <use href="./images/icons.svg#icon-telephone"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a href="https://www.facebook.com/" class="socials__link" target="_blank">
+                                <svg class="socials__icon">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="socials__item">
+                            <a href="https://www.instagram.com/" class="socials__link" target="_blank">
+                                <svg class="socials__icon">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
                 <button class="burger menu-btn-open" type="button">
@@ -39,7 +67,10 @@
                 </button>
             </div>
             <div class="mobile-menu">
-                <button class="mobile-menu__btn-close menu-btn-close" type="button">
+                <button
+                    class="mobile-menu__btn-close menu-btn-close"
+                    type="button"
+                >
                     <svg class="mobile-menu__icon-close" width="24" height="24">
                         <use href="./images/icons.svg#icon-iconClose"></use>
                     </svg>
@@ -61,7 +92,9 @@
             <section class="choose">
                 <div class="choose__container">
                     <h2 class="choose__title" id="why">
-                        Чому люди <br><span class="colored">обирають нас</span>
+                        Чому люди <br /><span class="colored"
+                            >обирають нас</span
+                        >
                     </h2>
                     <div class="choose__cards">
                         <div class="choose__card">
@@ -96,7 +129,7 @@
                     </div>
                 </div>
             </section>
-            <section class="procedures ">
+            <section class="procedures">
                 <div class="procedures__container">
                     <h2 class="procedures__title" id="procedures">
                         Наші <span class="colored">процедури</span>
@@ -109,19 +142,31 @@
                         </button>
                         <div class="procedures__cards">
                             <div class="procedures__card">
-                                <img src="./images/maskFace.jpg" alt="Mask" class="procedures__card-image">
+                                <img
+                                    src="./images/maskFace.jpg"
+                                    alt="Mask"
+                                    class="procedures__card-image"
+                                />
                                 <span class="procedures__card-text"
                                     >Маски для обличчя</span
                                 >
                             </div>
                             <div class="procedures__card">
-                                <img src="./images/needleFace.jpg" alt="Mask" class="procedures__card-image">
+                                <img
+                                    src="./images/needleFace.jpg"
+                                    alt="Mask"
+                                    class="procedures__card-image"
+                                />
                                 <span class="procedures__card-text"
                                     >Ін'єкції для обличчя</span
                                 >
                             </div>
                             <div class="procedures__card">
-                                <img src="./images/spatulaFace.jpg" alt="Mask" class="procedures__card-image">
+                                <img
+                                    src="./images/spatulaFace.jpg"
+                                    alt="Mask"
+                                    class="procedures__card-image"
+                                />
                                 <span class="procedures__card-text"
                                     >Очищення обличчя</span
                                 >
