--- a/index.html
+++ b/index.html
@@ -38,23 +38,41 @@
                     </ul>
                     <ul class="socials__list">
                         <li class="socials__item">
-                            <a href="tel:+380995327811" class="socials__link" target="_blank">
+                            <a
+                                href="tel:+380995327811"
+                                class="socials__link"
+                                target="_blank"
+                            >
                                 <svg class="socials__icon">
-                                    <use href="./images/icons.svg#icon-telephone"></use>
+                                    <use
+                                        href="./images/icons.svg#icon-telephone"
+                                    ></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials__item">
-                            <a href="https://www.facebook.com/" class="socials__link" target="_blank">
+                            <a
+                                href="https://www.facebook.com/"
+                                class="socials__link"
+                                target="_blank"
+                            >
                                 <svg class="socials__icon">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                    <use
+                                        href="./images/icons.svg#icon-facebook"
+                                    ></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials__item">
-                            <a href="https://www.instagram.com/" class="socials__link" target="_blank">
+                            <a
+                                href="https://www.instagram.com/"
+                                class="socials__link"
+                                target="_blank"
+                            >
                                 <svg class="socials__icon">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                    <use
+                                        href="./images/icons.svg#icon-instagram"
+                                    ></use>
                                 </svg>
                             </a>
                         </li>
@@ -65,8 +83,34 @@
                         <use href="./images/icons.svg#icon-menu"></use>
                     </svg>
                 </button>
+                <button
+                    class="menu__btn-close menu-btn-close visually-hidden"
+                    type="button"
+                >
+                    <svg
+                        class="icon-close"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="32"
+                        height="32"
+                        viewBox="0 0 32 32"
+                        fill="none"
+                    >
+                        <path
+                            d="M8 8L16 16L24 8"
+                            stroke="white"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                        />
+                        <path
+                            d="M8 24L16 16L24 24"
+                            stroke="white"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                        />
+                    </svg>
+                </button>
             </div>
-            <div class="mobile-menu">
+            <!-- <div class="mobile-menu">
                 <button
                     class="mobile-menu__btn-close menu-btn-close"
                     type="button"
@@ -75,7 +119,7 @@
                         <use href="./images/icons.svg#icon-iconClose"></use>
                     </svg>
                 </button>
-            </div>
+            </div> -->
         </header>
         <main>
             <section class="hero">
