add footer mobile

--- a/index.html
+++ b/index.html
@@ -393,7 +393,80 @@
                 ></iframe>
             </section>
         </main>
-        <footer></footer>
+        <footer class="footer">
+            <nav class="footer__nav">
+                <a href="#" class="logo footer-menu">
+                    <img
+                        src="./images/logo.svg"
+                        alt="Logo"
+                        class="logo__img footer-menu"
+                    />
+                </a>
+                <ul class="menu__list footer-menu">
+                    <li class="menu__item">
+                        <a href="#about" class="menu__link  footer-menu colored"
+                            >Про нас</a
+                        >
+                    </li>
+                    <li class="menu__item">
+                        <a href="#why" class="menu__link footer-menu">Чому ми</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#procedures" class="menu__link footer-menu">
+                            Наші процедури
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#find" class="menu__link footer-menu"> Контакти </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link footer-menu"> Політика конфіденційності </a>
+                    </li>
+                </ul>
+                <ul class="socials__list footer-menu">
+                    <li class="socials__item footer-menu">
+                        <a
+                            href="tel:+380995327811"
+                            class="socials__link footer-menu"
+                            target="_blank"
+                        >
+                            <svg class="socials__icon footer-menu">
+                                <use
+                                    href="./images/icons.svg#icon-telephone"
+                                ></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a
+                            href="https://www.facebook.com/"
+                            class="socials__link"
+                            target="_blank"
+                        >
+                            <svg class="socials__icon footer-menu">
+                                <use
+                                    href="./images/icons.svg#icon-facebook"
+                                ></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a
+                            href="https://www.instagram.com/"
+                            class="socials__link"
+                            target="_blank"
+                        >
+                            <svg class="socials__icon footer-menu">
+                                <use
+                                    href="./images/icons.svg#icon-instagram"
+                                ></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                <span class="rights">© 2022 Дані захищені</span>
+            </nav>
+        </footer>
 
         <div class="backdrop visually-hidden">
             <div class="modal">
