add desktop menu

--- a/index.html
+++ b/index.html
@@ -157,16 +157,15 @@
                         послуги з догляду за шкірою обличчя та тіла.
                     </p>
                     <p class="about__text">
-                        B <span class="strong">beauty zone</span> ми гарантуємо найвищі стандарти якості та
-                        приємний сервіс. Наші косметологічні процедури та
-                        препарати допоможуть вам підтримувати свою красу та
-                        молодість. <br> З нами краса назавжди!
+                        B <span class="strong">beauty zone</span> ми гарантуємо
+                        найвищі стандарти якості та приємний сервіс. Наші
+                        косметологічні процедури та препарати допоможуть вам
+                        підтримувати свою красу та молодість. <br />
+                        З нами краса назавжди!
                     </p>
                 </div>
                 <svg class="about__icon">
-                    <use
-                        href="./images/icons.svg#icon-Star"
-                    ></use>
+                    <use href="./images/icons.svg#icon-Star"></use>
                 </svg>
             </section>
             <section class="choose">
@@ -394,78 +393,117 @@
             </section>
         </main>
         <footer class="footer">
-            <nav class="footer__nav">
-                <a href="#" class="logo footer-menu">
-                    <img
-                        src="./images/logo.svg"
-                        alt="Logo"
-                        class="logo__img footer-menu"
-                    />
-                </a>
-                <ul class="menu__list footer-menu">
-                    <li class="menu__item">
-                        <a href="#about" class="menu__link  footer-menu colored"
-                            >Про нас</a
-                        >
-                    </li>
-                    <li class="menu__item">
-                        <a href="#why" class="menu__link footer-menu">Чому ми</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#procedures" class="menu__link footer-menu">
-                            Наші процедури
+            <div class="footer__container">
+                <nav class="footer__nav">
+                    <a href="#" class="logo footer-menu">
+                        <img
+                            src="./images/logo.svg"
+                            alt="Logo"
+                            class="logo__img footer-menu"
+                        />
+                    </a>
+                    <ul class="menu__list footer-menu">
+                        <li class="menu__item">
+                            <a
+                                href="#about"
+                                class="menu__link footer-menu colored"
+                                >Про нас</a
+                            >
+                        </li>
+                        <li class="menu__item">
+                            <a href="#why" class="menu__link footer-menu"
+                                >Чому ми</a
+                            >
+                        </li>
+                        <li class="menu__item">
+                            <a
+                                href="#procedures"
+                                class="menu__link footer-menu"
+                            >
+                                Наші процедури
+                            </a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#find" class="menu__link footer-menu">
+                                Контакти
+                            </a>
+                        </li>
+                        <li class="menu__item last-item">
+                            <a href="#" class="menu__link footer-menu">
+                                Політика конфіденційності
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="contacts">
+                        <address class="address">
+                            <a
+                                href="tel:+ 38 (096) 000 00 07"
+                                class="address__phone"
+                                >+ 38 (096) 000 00 07</a
+                            >
+                            <a
+                                href="mailto:beautyzone@gmail.com"
+                                class="address__mail"
+                                >beautyzone@gmail.com</a
+                            >
+                            <a
+                                href="https://maps.app.goo.gl/fGTeTijySY4bMUqH8"
+                                target="_blank"
+                                class="address__address"
+                                >Україна, м. Київ, <br />вул. Тараса Шевченка 5</a
+                            >
+                        </address>
+    
+                        <ul class="socials__list footer-menu">
+                            <li class="socials__item footer-menu">
+                                <a
+                                    href="tel:+380995327811"
+                                    class="socials__link footer-menu"
+                                    target="_blank"
+                                >
+                                    <svg class="socials__icon footer-menu">
+                                        <use
+                                            href="./images/icons.svg#icon-telephone"
+                                        ></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a
+                                    href="https://www.facebook.com/"
+                                    class="socials__link"
+                                    target="_blank"
+                                >
+                                    <svg class="socials__icon footer-menu">
+                                        <use
+                                            href="./images/icons.svg#icon-facebook"
+                                        ></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a
+                                    href="https://www.instagram.com/"
+                                    class="socials__link"
+                                    target="_blank"
+                                >
+                                    <svg class="socials__icon footer-menu">
+                                        <use
+                                            href="./images/icons.svg#icon-instagram"
+                                        ></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <li class="menu__item last-item">
+                        <a href="#" class="menu__link footer-menu">
+                            Політика конфіденційності
                         </a>
                     </li>
-                    <li class="menu__item">
-                        <a href="#find" class="menu__link footer-menu"> Контакти </a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" class="menu__link footer-menu"> Політика конфіденційності </a>
-                    </li>
-                </ul>
-                <ul class="socials__list footer-menu">
-                    <li class="socials__item footer-menu">
-                        <a
-                            href="tel:+380995327811"
-                            class="socials__link footer-menu"
-                            target="_blank"
-                        >
-                            <svg class="socials__icon footer-menu">
-                                <use
-                                    href="./images/icons.svg#icon-telephone"
-                                ></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="socials__item">
-                        <a
-                            href="https://www.facebook.com/"
-                            class="socials__link"
-                            target="_blank"
-                        >
-                            <svg class="socials__icon footer-menu">
-                                <use
-                                    href="./images/icons.svg#icon-facebook"
-                                ></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="socials__item">
-                        <a
-                            href="https://www.instagram.com/"
-                            class="socials__link"
-                            target="_blank"
-                        >
-                            <svg class="socials__icon footer-menu">
-                                <use
-                                    href="./images/icons.svg#icon-instagram"
-                                ></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-                <span class="rights">© 2022 Дані захищені</span>
-            </nav>
+                    <span class="rights">© 2022 Дані захищені</span>
+                </nav>
+            </div>
         </footer>
 
         <div class="backdrop visually-hidden">
